--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 </head>
 
 <body>
+  <header>
+    <h1>Header Logo</h1>
+    <nav>
+      <ul>
+        <li>Header link one</li>
+        <li>Header link two</li>
+        <li>Header link three</li>
+      </ul>
+    </nav>
+    <h2>This website is awesome</h2>
+    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
+      contrast.</p>
+    <button>Sign up </button>
+  </header>
+
 
 </body>
 
