--- a/index.html
+++ b/index.html
@@ -23,8 +23,30 @@
     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
       contrast.</p>
     <button>Sign up </button>
-  </header>
+    <div>
 
+  </header>
+  <section>
+    <h2> Some random information.</h2>
+    <p>this is some subtext under an illustration or image</p>
+    <p>this is some subtext under an illustration or image</p>
+    <p>this is some subtext under an illustration or image</p>
+    <p>this is some subtext under an illustration or image</p>
+  </section>
+  <section>
+    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
+      will actually read it. Who knows? All I know is that it looks nice.</p>
+    <p>-Thor, God of thunder</p>
+  </section>
+
+  <section>
+    <h3>Call to action! It's time!</h3>
+    <p>Sign up for our product by clicking that button right over there!</p>
+    <button>Sign up</button>
+  </section>
+  <footer>
+    <p>Copyright ©️ The Odin Project 2021</p>
+  </footer>
 
 </body>
 
