--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
       contrast.</p>
     <button>Sign up </button>
-    <div>
+    <div>this is a placeholder for an image</div>
 
   </header>
   <section>
