gave class to first h2 tag and styled it

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li>Header link three</li>
       </ul>
     </nav>
-    <h2>This website is awesome</h2>
+    <h2 class="hero-header">This website is awesome</h2>
     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
       contrast.</p>
     <button>Sign up </button>
