--- a/index.html
+++ b/index.html
@@ -27,19 +27,20 @@
 
   </header>
   <section>
-    <h2> Some random information.</h2>
+    <h2 class="info"> Some random information.</h2>
     <p>this is some subtext under an illustration or image</p>
     <p>this is some subtext under an illustration or image</p>
     <p>this is some subtext under an illustration or image</p>
     <p>this is some subtext under an illustration or image</p>
   </section>
-  <section>
+  <section class="quote-section">
+
     <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
       will actually read it. Who knows? All I know is that it looks nice.</p>
     <p>-Thor, God of thunder</p>
   </section>
 
-  <section>
+  <section class="call-to-action">
     <h3>Call to action! It's time!</h3>
     <p>Sign up for our product by clicking that button right over there!</p>
     <button>Sign up</button>
