--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <section class="call-to-action">
     <h3>Call to action! It's time!</h3>
-    <p>Sign up for our product by clicking that button right over there!</p>
+    <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
     <button>Sign up</button>
   </section>
   <footer>
