--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <button>Sign up</button>
   </section>
   <footer>
-    <p>Copyright ©️ The Odin Project 2021</p>
+    <p class="copyright">Copyright ©️ The Odin Project 2021</p>
   </footer>
 
 </body>
