--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
         <li>Header link two</li>
         <li>Header link three</li>
       </ul>
-      <section>
+
     </nav>
-    <h2 class="hero-header">This website is awesome</h2>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
-      contrast.</p>
-    <button>Sign up </button>
-    <div>this is a placeholder for an image</div>
+    <section class="main-header">
+      <h2 class="hero-header">This website is awesome</h2>
+      <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
+        contrast.</p>
+      <button>Sign up </button>
+      <div>this is a placeholder for an image</div>
     </section>
   </header>
   <section>
