--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
         contrast.</p>
       <button>Sign up </button>
-      <div>this is a placeholder for an image</div>
+      <div class="header-image">this is a placeholder for an image</div>
     </section>
   </header>
-  <section>
+  <section class="information-section">
     <h2 class="info"> Some random information.</h2>
     <p>this is some subtext under an illustration or image</p>
     <p>this is some subtext under an illustration or image</p>
