--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section class="call-to-action">
     <h3>Call to action! It's time!</h3>
     <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
-    <button>Sign up</button>
+    <button class="call-to-action-button">Sign up</button>
   </section>
   <footer>
     <p class="copyright">Copyright ©️ The Odin Project 2021</p>
