--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
   </header>
   <section class="information-section">
     <h2 class="info"> Some random information.</h2>
+    <div class="info-image"> </div>
     <p>this is some subtext under an illustration or image</p>
+
+    <div class="info-image"></div>
     <p>this is some subtext under an illustration or image</p>
+
+    <div class="info-image"></div>
     <p>this is some subtext under an illustration or image</p>
+
+    <div class="info-image"></div>
     <p>this is some subtext under an illustration or image</p>
+
   </section>
   <section class="quote-section">
 
