--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
 
     </nav>
     <section class="main-header">
-      <h2 class="hero-header">This website is awesome</h2>
-      <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
-        contrast.</p>
-      <button>Sign up </button>
-      <div class="header-image">this is a placeholder for an image</div>
+      <div class="header-container">
+        <div class="left-header">
+          <h2 class="hero-header">This website is awesome</h2>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
+            lower
+            contrast.</p>
+          <button>Sign up </button>
+
+        </div>
+        <div class="header-image">this is a placeholder for an image</div>
+      </div>
     </section>
   </header>
   <section class="information-section">
