--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
   </section>
   <section class="quote-section">
 
-    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
+    <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+      maybe people
       will actually read it. Who knows? All I know is that it looks nice.</p>
-    <p>-Thor, God of thunder</p>
+    <p class="quote-author">-Thor, God of thunder</p>
   </section>
 
   <section class="call-to-action">
