wrapped all of info content under h2 in a div

--- a/index.html
+++ b/index.html
@@ -37,18 +37,19 @@
   </header>
   <section class="information-section">
     <h2 class="info"> Some random information.</h2>
-    <div class="info-image"> </div>
-    <p>this is some subtext under an illustration or image</p>
+    <div class="cards">
+      <div class="info-image"> </div>
+      <p>this is some subtext under an illustration or image</p>
 
-    <div class="info-image"></div>
-    <p>this is some subtext under an illustration or image</p>
+      <div class="info-image"></div>
+      <p>this is some subtext under an illustration or image</p>
 
-    <div class="info-image"></div>
-    <p>this is some subtext under an illustration or image</p>
+      <div class="info-image"></div>
+      <p>this is some subtext under an illustration or image</p>
 
-    <div class="info-image"></div>
-    <p>this is some subtext under an illustration or image</p>
-
+      <div class="info-image"></div>
+      <p>this is some subtext under an illustration or image</p>
+    </div>
   </section>
   <section class="quote-section">
 
