--- a/index.html
+++ b/index.html
@@ -37,18 +37,26 @@
   </header>
   <section class="information-section">
     <h2 class="info"> Some random information.</h2>
-    <div class="cards">
-      <div class="info-image"> </div>
-      <p>this is some subtext under an illustration or image</p>
+    <div class="container">
+      <div class="card">
+        <div class="info-image"> </div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
 
-      <div class="info-image"></div>
-      <p>this is some subtext under an illustration or image</p>
+      <div class="card">
+        <div class="info-image"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
 
-      <div class="info-image"></div>
-      <p>this is some subtext under an illustration or image</p>
+      <div class="card">
+        <div class="info-image"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
 
-      <div class="info-image"></div>
-      <p>this is some subtext under an illustration or image</p>
+      <div class="card">
+        <div class="info-image"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
     </div>
   </section>
   <section class="quote-section">
