--- a/index.html
+++ b/index.html
@@ -71,9 +71,14 @@
   </section>
 
   <section class="call-to-action">
-    <h3>Call to action! It's time!</h3>
-    <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
-    <button class="call-to-action-button">Sign up</button>
+    <div class="cta-box">
+      <div class="cta-text">
+        <h3>Call to action! It's time!</h3>
+
+        <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
+      </div><button class="call-to-action-button">Sign up</button>
+
+    </div>
   </section>
   <footer>
     <p class="copyright">Copyright ©️ The Odin Project 2021</p>
