--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <h1>Header Logo</h1>
 
       <ul>
-        <li>Header link one</li>
-        <li>Header link two</li>
-        <li>Header link three</li>
+        <li><a href="#">Header link one</a></li>
+        <li><a href="#">Header link two</a></li>
+        <li><a href="#">Header link three</a></li>
       </ul>
 
     </nav>
