removed header image div including placeholder text, replaced with wine corks image.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <button>Sign up </button>
 
         </div>
-        <div class="header-image">this is a placeholder for an image</div>
+        <img class='img' src=images/wine-with-corks.jpg>
       </div>
     </section>
   </header>
