--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
   </section>
   <section class="quote-section">
 
-    <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
-      maybe people
-      will actually read it. Who knows? All I know is that it looks nice.</p>
-    <p class="quote-author">-Thor, God of thunder</p>
+    <p class="quote">When it comes to wine, I tell people to throw away the vintage charts and invest in a corkscrew.
+      The best way to learn about wine is the drinking.</p>
+    <p class="quote-author">--- Alexis Lichine</p>
   </section>
 
   <section class="call-to-action">
