--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>Header Logo</h1>
 
       <ul>
-        <li><a href="#">Header link one</a></li>
+        <li><a href="#">About</a></li>
         <li><a href="#">Header link two</a></li>
         <li><a href="#">Header link three</a></li>
       </ul>
