--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <ul>
         <li><a href="#">About</a></li>
-        <li><a href="#">Header link two</a></li>
+        <li><a href="#">Pricing</a></li>
         <li><a href="#">Header link three</a></li>
       </ul>
 
