--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="#">About</a></li>
         <li><a href="#">Pricing</a></li>
-        <li><a href="#">Header link three</a></li>
+        <li><a href="#">About Us</a></li>
       </ul>
 
     </nav>
