changed header-img to header-logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <nav>
-      <h1><img class="header-img" src="images/logo_transparent.png"></h1>
+      <h1><img class="header-logo" src="images/logo_transparent.png"></h1>
 
       <ul>
         <li><a href="#">About</a></li>
