changed .img to .header-img

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <button>Sign up </button>
 
         </div>
-        <img class='img' src=images/wine-with-corks.jpg>
+        <img class='header-img' src=images/wine-with-corks.jpg>
       </div>
     </section>
   </header>
