added alt text for header logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
   <header>
     <nav>
-      <h1><img class="header-logo" src="images/logo_transparent.png"></h1>
+      <h1><img class="header-logo" src="images/logo_transparent.png"
+          alt="gold square outline with small wine glass inside with line under it, with brand name 'w!ine' below it">
+      </h1>
 
       <ul>
         <li><a href="#">About</a></li>
