--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="card">
-        <div class="info-image"></div>
+        <div class="info-image white-wine-card"></div>
         <p>this is some subtext under an illustration or image</p>
       </div>
 
