--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
       </div>
 
       <div class="card">
-        <div class="info-image"></div>
+        <div class="info-image rose-wine-card"></div>
         <p>this is some subtext under an illustration or image</p>
       </div>
 
       <div class="card">
-        <div class="info-image"></div>
+        <div class="info-image sparkling-wine-card"></div>
         <p>this is some subtext under an illustration or image</p>
       </div>
     </div>
