change copyright from The Odin Project 2021 to Royuin 2022

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
   </section>
   <footer>
-    <p class="copyright">Copyright ©️ The Odin Project 2021</p>
+    <p class="copyright">Copyright ©️ Royuin 2022</p>
   </footer>
 
 </body>
