--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="cta-text">
         <h3>Call to action! It's time!</h3>
 
-        <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
+        <p class="sign-up-text">Sign up to drink some wine by clicking that button right over there!</p>
       </div><button class="call-to-action-button">Sign up</button>
 
     </div>
